adding sounds and sound effects

--- a/drums.html
+++ b/drums.html
@@ -4,11 +4,53 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="drums.css" type="text/css">
     <script defer src="drums.js"></script>
     <title></title>
 </head>
 
-<body>
+<body id="body">
+    <main>
+        <img id="drums" src="drums.png" alt="drums">
+    </main>
+    <div id="buttons">
+        <button id="bt1">Boom (W)</button>
+        <button id="bt2">Clap (E)</button>
+        <button id="bt3">Hihat (R)</button>
+        <button id="bt4">Kick (S)</button>
+        <button id="bt5">Openhat (D)</button>
+        <button id="bt6">Ride (F)</button>
+        <button id="bt7">Snare (X)</button>
+        <button id="bt8">Tink (C)</button>
+        <button id="bt9">Tom (V)</button>
+    </div>
+    <audio id="boom">
+        <source src="sounds/boom.wav">
+    </audio>
+    <audio id="clap">
+        <source src="sounds/clap.wav">
+    </audio>
+    <audio id="hihat">
+        <source src="sounds/hihat.wav">
+    </audio>
+    <audio id="kick">
+        <source src="sounds/kick.wav">
+    </audio>
+    <audio id="openhat">
+        <source src="sounds/openhat.wav">
+    </audio>
+    <audio id="ride">
+        <source src="sounds/ride.wav">
+    </audio>
+    <audio id="snare">
+        <source src="sounds/snare.wav">
+    </audio>
+    <audio id="tink">
+        <source src="sounds/tink.wav">
+    </audio>
+    <audio id="tom">
+        <source src="sounds/tom.wav">
+    </audio>
 
 </body>
 
