--- a/drums.html
+++ b/drums.html
@@ -11,46 +11,47 @@
 
 <body id="body">
     <main>
+        <ul id="buttons">
+            <li id="bt1">Boom (W)</li>
+            <li id="bt2">Clap (E)</li>
+            <li id="bt3">Hihat (R)</li>
+            <li id="bt4">Kick (S)</li>
+            <li id="bt5">Openhat (D)</li>
+            <li id="bt6">Ride (F)</li>
+            <li id="bt7">Snare (X)</li>
+            <li id="bt8">Tink (C)</li>
+            <li id="bt9">Tom (V)</li>
+        </ul>
+        <audio id="boom">
+            <source src="sounds/boom.wav">
+        </audio>
+        <audio id="clap">
+            <source src="sounds/clap.wav">
+        </audio>
+        <audio id="hihat">
+            <source src="sounds/hihat.wav">
+        </audio>
+        <audio id="kick">
+            <source src="sounds/kick.wav">
+        </audio>
+        <audio id="openhat">
+            <source src="sounds/openhat.wav">
+        </audio>
+        <audio id="ride">
+            <source src="sounds/ride.wav">
+        </audio>
+        <audio id="snare">
+            <source src="sounds/snare.wav">
+        </audio>
+        <audio id="tink">
+            <source src="sounds/tink.wav">
+        </audio>
+        <audio id="tom">
+            <source src="sounds/tom.wav">
+        </audio>
         <img id="drums" src="drums.png" alt="drums">
+
     </main>
-    <div id="buttons">
-        <button id="bt1">Boom (W)</button>
-        <button id="bt2">Clap (E)</button>
-        <button id="bt3">Hihat (R)</button>
-        <button id="bt4">Kick (S)</button>
-        <button id="bt5">Openhat (D)</button>
-        <button id="bt6">Ride (F)</button>
-        <button id="bt7">Snare (X)</button>
-        <button id="bt8">Tink (C)</button>
-        <button id="bt9">Tom (V)</button>
-    </div>
-    <audio id="boom">
-        <source src="sounds/boom.wav">
-    </audio>
-    <audio id="clap">
-        <source src="sounds/clap.wav">
-    </audio>
-    <audio id="hihat">
-        <source src="sounds/hihat.wav">
-    </audio>
-    <audio id="kick">
-        <source src="sounds/kick.wav">
-    </audio>
-    <audio id="openhat">
-        <source src="sounds/openhat.wav">
-    </audio>
-    <audio id="ride">
-        <source src="sounds/ride.wav">
-    </audio>
-    <audio id="snare">
-        <source src="sounds/snare.wav">
-    </audio>
-    <audio id="tink">
-        <source src="sounds/tink.wav">
-    </audio>
-    <audio id="tom">
-        <source src="sounds/tom.wav">
-    </audio>
 
 </body>
 
