--- a/drums.html
+++ b/drums.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="drums.css" type="text/css">
-    <script defer src="drums.js"></script>
+    <link rel="stylesheet" href="../Project_Pool/drums.css" type="text/css">
+    <script defer src="../Project_Pool/drums.js"></script>
     <title></title>
 </head>
 
@@ -23,33 +23,33 @@
             <li id="bt9">Tom (V)</li>
         </ul>
         <audio id="boom">
-            <source src="sounds/boom.wav">
+            <source src="../Project_Pool/sounds/boom.wav">
         </audio>
         <audio id="clap">
-            <source src="sounds/clap.wav">
+            <source src="../Project_Pool/sounds/clap.wav">
         </audio>
         <audio id="hihat">
-            <source src="sounds/hihat.wav">
+            <source src="../Project_Pool/sounds/hihat.wav">
         </audio>
         <audio id="kick">
-            <source src="sounds/kick.wav">
+            <source src="../Project_Pool/sounds/kick.wav">
         </audio>
         <audio id="openhat">
-            <source src="sounds/openhat.wav">
+            <source src="../Project_Pool/sounds/openhat.wav">
         </audio>
         <audio id="ride">
-            <source src="sounds/ride.wav">
+            <source src="../Project_Pool/sounds/ride.wav">
         </audio>
         <audio id="snare">
-            <source src="sounds/snare.wav">
+            <source src="../Project_Pool/sounds/snare.wav">
         </audio>
         <audio id="tink">
-            <source src="sounds/tink.wav">
+            <source src="../Project_Pool/sounds/tink.wav">
         </audio>
         <audio id="tom">
-            <source src="sounds/tom.wav">
+            <source src="../Project_Pool/sounds/tom.wav">
         </audio>
-        <img id="drums" src="drums.png" alt="drums">
+        <img id="drums" src="../Project_Pool/drums.png" alt="drums">
 
     </main>
 
